syntax = "proto3";

package author;

service AuthorService {
  rpc getAuthors (Empty) returns (AuthorList);
  rpc getAuthorById (AuthorDetailRequest) returns (Author);
  rpc createAuthor (CreateAuthorRequest) returns (Author);
  rpc updateAuthor (Author) returns (Author);
  rpc deleteAuthor (DeleteAuthorRequest) returns (Author);
}

message Empty {}

message AuthorDetailRequest {
    string id = 1;
}

message Author {
  string id = 1;
  string name = 2;
}

message CreateAuthorRequest {
  string name = 1;
}

message DeleteAuthorRequest {
    string id = 1;
}

message AuthorList {
  repeated Author authors = 1;
}